force-app/main/default/objects/VolunteerPosition__c/VolunteerPosition__c.object-meta.xml
<CustomObject>
    <label>Volunteer Position</label>
    <nameField>
        <label>Volunteer Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>