force-app/main/default/objects/VolunteerPosition__c/fields/LocationAddress__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress__c</fullName>
    <formula>Location__r.VisitorAddress.Street &amp;  BR() &amp; Location__r.VisitorAddress.City &amp; &quot;, &quot; &amp;  Location__r.VisitorAddress.State &amp;  BR() &amp;  Location__r.VisitorAddress.PostalCode</formula>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>