force-app/main/default/objects/VolunteerPosition__c/fields/MinimumAge__c.field-meta.xml
<CustomField>
    <fullName>MinimumAge__c</fullName>
    <label>Minimum Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>